--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ Pillow==8.2.0
 requests==2.25.1
 https://github.com/turicas/rows/archive/develop.zip
 tqdm==4.61.0
+color-extraction==0.1a4
+extcolors==1.0.0
