--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ https://github.com/turicas/rows/archive/develop.zip
 tqdm==4.61.0
 color-extraction==0.1a4
 extcolors==1.0.0
+wcag-contrast-ratio==0.9
+opencv-python==4.5.2.54
